# Toot47

./: .cursorrules  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup_and_run.bat  start_dev_environment.bat  system_prompt.md  test_server.py
chroma_db/user_default/062d0c5d-7b75-4c82-85a5-5ce354a83a3e/: index_metadata.pickle
data/: Deep-Dive Investigation_ n8n GCP Production Deploy.md  GhostWriter.txt  Przewodnik Eksperta_ Jak Krok Po Kroku Wyszukiwać.md  System Prompt.md  Viral Social Copywriting Knowledge_ 2024-2025 Rese.md  _role__    You are a Principal Cloud Solutions Ar....md  asd.md  test_knowledge.md
frontend/: package.json
frontend/src/app/: layout.tsx  page.tsx
scripts/: install_all.bat  install_all.ps1  install_hooks.ps1  install_hooks.sh  setup_graph_rag.bat  setup_graph_rag.ps1
src/toot47/: config.py  graph_builder.py  hybrid_agent.py  main.py  qa.py  vector_rag.py
src/toot47/api/: main.py
src/toot4T7/: main.py
tests/: test_qa.py
